--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ go:
   - master
   - tip
 install:
-    - go get -v .
+    - go get -u github.com/golang/dep/cmd/dep
+    - dep ensure
     - go get -v github.com/golang/lint/golint
     - go get github.com/mitchellh/gox
 script:
