updates .travis.yml 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 script:
     #- diff <(gofmt -d .) <(echo -n)
     - go vet -x ./...
-    - golint ./...
+    #- golint ./...
     - go test -v -race ./...
     - gox -output="bin/discord-image-downloader-go-{{.OS}}-{{.Arch}}" -osarch="windows/amd64"
 deploy:
